<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="br.odb.giovanni.menus.HowToPlayActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/how_to_play_desc"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/slide_to_read"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#22FFFFFF"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:contentDescription="@string/giovanni_our_hero"
				app:srcCompat="@drawable/hero2_1" />

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:text="@string/about_giovanni" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#55FFFFFF"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:text="@string/watch_for_the_dynamite" />

			<ImageView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:contentDescription="@string/live_dynamite"
				app:srcCompat="@drawable/bomba5" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#22FFFFFF"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:contentDescription="@string/hungry_monster"
				app:srcCompat="@drawable/monster_3"
				tools:ignore="ImageContrastCheck" />

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:text="@string/hungry_monsters" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#55FFFFFF"
			android:orientation="horizontal">

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:text="@string/monsters_behaviour" />

			<ImageView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:contentDescription="@string/monster_lair_on_the_ground"
				app:srcCompat="@drawable/vulcan_02" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#22FFFFFF"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:contentDescription="@string/directions_you_press_to_move"
				app:srcCompat="@drawable/control_brown" />

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:text="@string/how_to_move" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#55FFFFFF"
			android:orientation="horizontal">

			<TextView
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:text="@string/how_to_use_map" />

			<ImageView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:contentDescription="@string/the_minimap"
				app:srcCompat="@drawable/map" />
		</LinearLayout>

		<Button
			android:id="@+id/btnBack"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/back" />

	</LinearLayout>

</ScrollView>